<resources>
    <string name="app_name">SuppApp</string>
    <string name="facebook_app_id">318177705646182</string>
    <string name="fb_login_protocol_scheme">fb318177705646182</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="crear_compulsa">Crear Compulsa</string>
    <string name="titulo_agregar_compulsa">Crear Nueva Compulsa</string>
    <string name="titulo_compulsa">Título Compulsa</string>
    <string name="descripcion_compulsa">Descripción</string>
    <string name="boton_aceptar_compulsa">Aceptar</string>
    <string name="boton_cancelar_compulsa">Cancelar</string>
    <string name="titulo_detalle_compulsa">Detalle Compulsa</string>
    <string name="boton_volver_compulsa">Volver</string>
    <string name="boton_seleccionar_archivo">Seleccionar Oferta</string>
    <string name="boton_subir_archivo">Subir Oferta</string>
    <string name="boton_seleccionar_fecha">Seleccionar fecha</string>
    <string name="boton_guardar_compulsa">Guardar</string>
    <string name="fecha_cierre">Fecha Cierre</string>
</resources>
